@@ -3,8 +3,7 @@ plugins {
 	id "com.modrinth.minotaur" version "2.+"
 	id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.3"
 	id 'org.quiltmc.gradle.licenser' version '1.+'
-	id 'fabric-loom' version '1.2-SNAPSHOT'
-	id 'io.github.juuxel.loom-quiltflower' version '1.9.+'
+	id 'fabric-loom' version '1.4-SNAPSHOT'
 }
 
 version = "$mod_version+build.$build_number-$project.minecraft_version"
@@ -64,7 +63,7 @@ repositories {
 dependencies {
 	minecraft libs.minecraft
 	mappings loom.layered {
-		it.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:intermediary-v2")
+//		it.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:intermediary-v2")
 		it.parchment("org.parchmentmc.data:parchment-1.20.1:${libs.versions.parchment.get()}@zip")
 		it.officialMojangMappings()
 	}
@@ -88,17 +87,13 @@ processResources {
 java {
 	withSourcesJar()
 	withJavadocJar()
-	toolchain.languageVersion = JavaLanguageVersion.of(17)
+	toolchain.getLanguageVersion().set(JavaLanguageVersion.of(17))
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
+	it.options.getRelease().set(17)
 	it.options.encoding = 'UTF-8'
 	it.options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec) {
-//	jvmArgs += "--enable-preview"
 }
 
 compileJava {
